<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/homescreen_update_indic_item"
        android:actionViewClass="android.widget.ProgressBar"
        android:enabled="false"
        android:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/homescreen_auth_item"
        android:showAsAction="always"
        android:title="@string/homescreen_auth_menu_item"/>
    <item
        android:id="@+id/homescreen_refresh_item"
        android:showAsAction="never"
        android:title="@string/homescreen_refresh_menu_item" />
    <item
        android:id="@+id/homescreen_info_item"
        android:showAsAction="collapseActionView"
        android:title="@string/homescreen_info_menu_item"/>

</menu>