<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dailymotion" >

    <RelativeLayout
        android:id="@+id/videoplayer_rl"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:background="@android:color/black"
        android:layout_alignParentTop="true" >

        <VideoView
            android:id="@+id/videoplayer_vv"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true" />

        <RelativeLayout
            android:id="@+id/videoplayer_status_rl"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:animateLayoutChanges="true"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/videoplayer_status_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_medium"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/videoplayer_status_iv"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/videoplayer_nextepisode"
                    android:scaleType="center"
                    android:src="@drawable/play_again_button_selector"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/videoplayer_controls_loading_pb"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:indeterminate="true"
                    android:indeterminateBehavior="repeat" />

                <TextView
                    android:id="@+id/videoplayer_status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videoplayer_buffering"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/videoplayer_nextepisode_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/videoplayer_status_ll"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/videoplayer_nextepisode_ib"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/episode_image_hint"
                    android:scaleType="fitCenter"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/videoplayer_nextepisode_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videoplayer_nextepisode"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/videoplayer_controls_rl"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:animateLayoutChanges="true" >

            <ImageButton
                android:id="@+id/videoplayer_controls_fullscreen_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/expand_button_selector"
                android:contentDescription="@string/videoplayer_fullscreen_hint" />

            <RelativeLayout
                android:id="@+id/videoplayer_controls_time_rl"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/ab_background_dailymotion_kids"
                android:orientation="horizontal"
                android:padding="@dimen/padding_medium" >

                <ImageButton
                    android:id="@+id/videoplayer_controls_play_ib"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="@drawable/pause_button_selector"
                    android:contentDescription="@string/videoplayer_play_pause_hint" />

                <TextView
                    android:id="@+id/videoplayer_controls_elapsed_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_toRightOf="@id/videoplayer_controls_play_ib"
                    android:text="@string/video_initialtime"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/videoplayer_controls_total_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:text="@string/video_initialtime"
                    android:textColor="@android:color/white"
                    android:visibility="invisible" />

                <SeekBar
                    android:id="@+id/videoplayer_controls_seekbar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/videoplayer_controls_total_tv"
                    android:layout_toRightOf="@id/videoplayer_controls_elapsed_tv"
                    android:enabled="false" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <TabHost
        android:id="@+id/videoplayer_tabhost"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/videoplayer_rl" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/ab_solid_dailymotion_dark"
                android:orientation="horizontal" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0" />

            <android.support.v4.view.ViewPager
                android:id="@+id/videoplayer_viewpager"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </TabHost>

</RelativeLayout>